[gd_scene load_steps=43 format=2]

[ext_resource path="res://Pic/bc911.png" type="Texture" id=1]
[ext_resource path="res://Pic/map.png" type="Texture" id=2]
[ext_resource path="res://fonts/NotoSansTC-VariableFont_wght.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://fonts/個人資料.tres" type="DynamicFont" id=5]
[ext_resource path="res://pic/B1.png" type="Texture" id=6]
[ext_resource path="res://script/1.4.1.gd" type="Script" id=7]
[ext_resource path="res://Pic/pen.png" type="Texture" id=8]
[ext_resource path="res://fonts/font1 - 複製 (10) - 複製.tres" type="DynamicFont" id=9]
[ext_resource path="res://script/birth.gd" type="Script" id=10]
[ext_resource path="res://fonts/b_enter.tres" type="StyleBox" id=11]
[ext_resource path="res://script/school.gd" type="Script" id=12]
[ext_resource path="res://script/phone.gd" type="Script" id=13]
[ext_resource path="res://pic/delete1.png" type="Texture" id=14]
[ext_resource path="res://Pic/edit.png" type="Texture" id=15]

[sub_resource type="DynamicFont" id=36]
size = 45
outline_size = 1
outline_color = Color( 0, 0.494118, 1, 1 )
use_filter = true
extra_spacing_top = -10
extra_spacing_bottom = -8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=7]
size = 45
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
extra_spacing_top = -10
extra_spacing_bottom = -8
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=33]
size = 60
outline_size = 1
outline_color = Color( 0.654902, 0.654902, 0.670588, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=6]
draw_center = false

[sub_resource type="StyleBoxFlat" id=3]
draw_center = false

[sub_resource type="StyleBoxFlat" id=4]
draw_center = false

[sub_resource type="StyleBoxFlat" id=5]
draw_center = false

[sub_resource type="StyleBoxFlat" id=1]
draw_center = false

[sub_resource type="DynamicFont" id=32]
size = 60
outline_size = 5
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=35]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[sub_resource type="Theme" id=17]

[sub_resource type="StyleBoxFlat" id=12]
bg_color = Color( 0, 0, 0, 0.764706 )

[sub_resource type="DynamicFont" id=37]
size = 35
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=19]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=38]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="StyleBoxFlat" id=39]
content_margin_left = 10.0
content_margin_top = 3.0
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 1
border_color = Color( 1, 1, 1, 1 )
corner_radius_top_left = 20
corner_radius_top_right = 20
corner_radius_bottom_right = 20
corner_radius_bottom_left = 20

[sub_resource type="DynamicFont" id=20]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=21]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="Theme" id=18]

[sub_resource type="DynamicFont" id=40]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=23]
content_margin_left = 11.0
content_margin_right = 11.0
content_margin_top = 11.0
content_margin_bottom = 11.0
bg_color = Color( 0.733333, 0.682353, 0.682353, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=28]
content_margin_left = 11.0
content_margin_right = 11.0
content_margin_top = 11.0
content_margin_bottom = 11.0
bg_color = Color( 0.733333, 0.682353, 0.682353, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="DynamicFont" id=22]
size = 30
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
size = 20
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 4 )

[sub_resource type="StyleBoxFlat" id=24]
content_margin_left = 11.0
content_margin_right = 11.0
content_margin_top = 11.0
content_margin_bottom = 11.0
bg_color = Color( 0.733333, 0.682353, 0.682353, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=26]
content_margin_left = 11.0
content_margin_right = 11.0
content_margin_top = 11.0
content_margin_bottom = 11.0
bg_color = Color( 0.733333, 0.682353, 0.682353, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=25]
content_margin_left = 11.0
content_margin_right = 11.0
content_margin_top = 11.0
content_margin_bottom = 11.0
bg_color = Color( 0.733333, 0.682353, 0.682353, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[sub_resource type="StyleBoxFlat" id=27]
content_margin_left = 11.0
content_margin_right = 11.0
content_margin_top = 11.0
content_margin_bottom = 11.0
bg_color = Color( 0.733333, 0.682353, 0.682353, 1 )
corner_radius_top_left = 11
corner_radius_top_right = 11
corner_radius_bottom_right = 11
corner_radius_bottom_left = 11

[node name="Node2D2" type="Node2D"]
script = ExtResource( 7 )

[node name="BackgroundPicture" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = 1920.0
margin_bottom = 1080.0
texture = ExtResource( 1 )
expand = true

[node name="BackgroundBoxPicture" type="TextureRect" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -799.0
margin_top = -580.0
margin_right = -218.0
margin_bottom = 40.0
rect_scale = Vector2( 2.8, 2.3 )
texture = ExtResource( 2 )
expand = true

[node name="直線" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture"]
position = Vector2( 324.711, 78.2818 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( 34, 110, 34, 400 )
width = 0.5
default_color = Color( 0, 0, 0, 1 )

[node name="人物" type="TextureRect" parent="BackgroundPicture/BackgroundBoxPicture"]
margin_left = 66.0714
margin_top = 199.13
margin_right = 566.071
margin_bottom = 727.13
rect_scale = Vector2( 0.4, 0.4 )
texture = ExtResource( 6 )

[node name="右短線1" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture"]
position = Vector2( 406.032, 110.716 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( -80, 120, 80, 120 )
width = 1.5
default_color = Color( 0, 0, 0, 1 )

[node name="右短線2" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture"]
position = Vector2( 406.032, 128.543 )
scale = Vector2( -1.59461, 0.76087 )
points = PoolVector2Array( -80, 160, 80, 160 )
width = 1.5
default_color = Color( 0, 0, 0, 1 )

[node name="右短線3" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture"]
position = Vector2( 406.032, 175.499 )
rotation = 3.14159
scale = Vector2( 1.59461, -0.76087 )
points = PoolVector2Array( -80, 160, 80, 160 )
width = 1.5
default_color = Color( 0, 0, 0, 1 )

[node name="右短線4" type="Line2D" parent="BackgroundPicture/BackgroundBoxPicture"]
position = Vector2( 406.032, 224.194 )
rotation = 3.14159
scale = Vector2( 1.59461, -0.76087 )
points = PoolVector2Array( -80, 160, 80, 160 )
width = 1.5
default_color = Color( 0, 0, 0, 1 )

[node name="mailLabel" type="Label" parent="BackgroundPicture"]
margin_left = 1111.0
margin_top = 785.0
margin_right = 1415.0
margin_bottom = 833.0
custom_colors/font_color = Color( 0, 0.494118, 1, 1 )
custom_fonts/font = SubResource( 36 )

[node name="信箱" type="Label" parent="BackgroundPicture"]
margin_left = 959.0
margin_top = 779.0
margin_right = 1081.0
margin_bottom = 841.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "信 箱"

[node name="phoneLabel" type="Label" parent="BackgroundPicture"]
margin_left = 1111.0
margin_top = 680.0
margin_right = 1341.0
margin_bottom = 728.0
custom_colors/font_color = Color( 0, 0.494118, 1, 1 )
custom_fonts/font = SubResource( 36 )

[node name="電話" type="Label" parent="BackgroundPicture"]
margin_left = 959.0
margin_top = 674.0
margin_right = 1081.0
margin_bottom = 736.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "電 話"

[node name="schoolLabel" type="Label" parent="BackgroundPicture"]
margin_left = 1111.0
margin_top = 570.0
margin_right = 1199.0
margin_bottom = 618.0
custom_colors/font_color = Color( 0, 0.494118, 1, 1 )
custom_fonts/font = SubResource( 36 )

[node name="學校" type="Label" parent="BackgroundPicture"]
margin_left = 959.0
margin_top = 564.0
margin_right = 1081.0
margin_bottom = 626.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "學 校"

[node name="birthLabel" type="Label" parent="BackgroundPicture"]
margin_left = 1111.0
margin_top = 458.0
margin_right = 1325.0
margin_bottom = 506.0
custom_colors/font_color = Color( 0, 0.494118, 1, 1 )
custom_fonts/font = SubResource( 36 )

[node name="生日" type="Label" parent="BackgroundPicture"]
margin_left = 959.0
margin_top = 452.0
margin_right = 1081.0
margin_bottom = 514.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "生 日"

[node name="ageLabel" type="Label" parent="BackgroundPicture"]
margin_left = 1111.0
margin_top = 350.0
margin_right = 1157.0
margin_bottom = 398.0
custom_colors/font_color = Color( 0, 0.494118, 1, 1 )
custom_fonts/font = SubResource( 36 )

[node name="age" type="Label" parent="BackgroundPicture"]
margin_left = 959.0
margin_top = 344.0
margin_right = 1081.0
margin_bottom = 406.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 5 )
text = "年 齡"

[node name="Label" type="Label" parent="BackgroundPicture"]
margin_left = 441.0
margin_top = 308.0
margin_right = 842.0
margin_bottom = 375.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 7 )
align = 1
valign = 1

[node name="record" type="Button" parent="BackgroundPicture"]
margin_left = 919.0
margin_top = 176.0
margin_right = 1591.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 354.143, 83.5218 )
custom_colors/font_color_disabled = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color_focus = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color_hover = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_colors/font_color_pressed = Color( 0.654902, 0.654902, 0.670588, 1 )
custom_fonts/font = SubResource( 33 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "簽 到 記 錄"

[node name="personal" type="Button" parent="BackgroundPicture"]
margin_left = 346.0
margin_top = 176.0
margin_right = 917.0
margin_bottom = 264.0
rect_pivot_offset = Vector2( 354.143, 83.5218 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 32 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 3 )
custom_styles/focus = SubResource( 4 )
custom_styles/disabled = SubResource( 5 )
custom_styles/normal = SubResource( 1 )
text = "個 人 資 料"

[node name="大橫線" type="Line2D" parent="BackgroundPicture"]
position = Vector2( 1131.19, 103.048 )
rotation = 3.14159
scale = Vector2( 4.46491, -1.75 )
points = PoolVector2Array( -103.655, 100, 177.202, 100 )
width = 1.0
default_color = Color( 0.654902, 0.654902, 0.670588, 1 )

[node name="左短線" type="Line2D" parent="BackgroundPicture"]
position = Vector2( 1131.19, 103.048 )
rotation = 3.14159
scale = Vector2( 4.46491, -1.75 )
points = PoolVector2Array( 48, 100, 177, 100 )
width = 4.0
default_color = Color( 0, 0, 0, 1 )

[node name="edit_birth_button" type="Button" parent="BackgroundPicture"]
margin_left = 1552.0
margin_top = 458.0
margin_right = 1602.0
margin_bottom = 508.0
custom_styles/hover = SubResource( 35 )
custom_styles/pressed = SubResource( 35 )
custom_styles/focus = SubResource( 35 )
custom_styles/disabled = SubResource( 35 )
custom_styles/normal = SubResource( 35 )
icon = ExtResource( 8 )
flat = true
expand_icon = true

[node name="edit_school_button" type="Button" parent="BackgroundPicture"]
margin_left = 1552.0
margin_top = 571.0
margin_right = 1602.0
margin_bottom = 621.0
custom_styles/hover = SubResource( 35 )
custom_styles/pressed = SubResource( 35 )
custom_styles/focus = SubResource( 35 )
custom_styles/disabled = SubResource( 35 )
custom_styles/normal = SubResource( 35 )
icon = ExtResource( 8 )
flat = true
icon_align = 1
expand_icon = true

[node name="edit_phone_button" type="Button" parent="BackgroundPicture"]
margin_left = 1552.0
margin_top = 672.0
margin_right = 1602.0
margin_bottom = 722.0
custom_styles/hover = SubResource( 35 )
custom_styles/pressed = SubResource( 35 )
custom_styles/focus = SubResource( 35 )
custom_styles/disabled = SubResource( 35 )
custom_styles/normal = SubResource( 35 )
icon = ExtResource( 8 )
flat = true
icon_align = 1
expand_icon = true

[node name="birth" type="WindowDialog" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = SubResource( 17 )
custom_constants/close_h_ofs = 30
custom_constants/close_v_ofs = -10
custom_styles/panel = SubResource( 12 )
script = ExtResource( 10 )

[node name="TextureRect" type="TextureRect" parent="BackgroundPicture/birth"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -525.0
margin_top = -298.0
margin_right = 525.0
margin_bottom = 298.0
texture = ExtResource( 15 )
expand = true

[node name="文字" type="Label" parent="BackgroundPicture/birth/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 124.0
margin_right = 70.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 37 )
text = "修改生日"

[node name="line" type="Line2D" parent="BackgroundPicture/birth/TextureRect"]
position = Vector2( 36.922, -197.501 )
rotation = 3.14159
scale = Vector2( 1.59461, -0.76087 )
points = PoolVector2Array( -145, 520, -465, 520 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="YearLineEdit" type="LineEdit" parent="BackgroundPicture/birth/TextureRect"]
margin_left = 300.0
margin_top = 268.0
margin_right = 400.0
margin_bottom = 328.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/focus = SubResource( 38 )
custom_styles/normal = SubResource( 39 )
align = 1
placeholder_text = "YYYY"
placeholder_alpha = 0.15

[node name="MonthLineEdit" type="LineEdit" parent="BackgroundPicture/birth/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -50.0
margin_top = -30.0
margin_right = 50.0
margin_bottom = 30.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 20 )
custom_styles/focus = SubResource( 39 )
custom_styles/normal = SubResource( 39 )
align = 1
placeholder_text = "MM"
placeholder_alpha = 0.15

[node name="DayLineEdit" type="LineEdit" parent="BackgroundPicture/birth/TextureRect"]
margin_left = 650.0
margin_top = 268.0
margin_right = 750.0
margin_bottom = 328.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 21 )
custom_styles/focus = SubResource( 39 )
custom_styles/normal = SubResource( 39 )
align = 1
placeholder_text = "DD"
placeholder_alpha = 0.15

[node name="b_enter" type="Button" parent="BackgroundPicture/birth/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -212.0
margin_right = 55.0
margin_bottom = -160.0
theme = SubResource( 18 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 40 )
custom_styles/hover = SubResource( 23 )
custom_styles/pressed = SubResource( 28 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
text = "確定"
icon_align = 1

[node name="-" type="Label" parent="BackgroundPicture/birth/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -95.0
margin_top = -30.0
margin_right = -84.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "-"

[node name="-2" type="Label" parent="BackgroundPicture/birth/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = 84.0
margin_top = -30.0
margin_right = 95.0
margin_bottom = 48.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 9 )
text = "-"

[node name="HTTPRequest" type="HTTPRequest" parent="BackgroundPicture/birth"]

[node name="cross2" type="Button" parent="BackgroundPicture/birth"]
margin_left = 1795.0
margin_top = 24.0
margin_right = 2307.0
margin_bottom = 530.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 14 )
flat = true

[node name="school" type="WindowDialog" parent="BackgroundPicture"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = SubResource( 17 )
custom_constants/close_h_ofs = 30
custom_constants/close_v_ofs = -10
custom_styles/panel = SubResource( 12 )
script = ExtResource( 12 )

[node name="TextureRect" type="TextureRect" parent="BackgroundPicture/school"]
margin_left = 435.0
margin_top = 242.0
margin_right = 1485.0
margin_bottom = 838.0
texture = ExtResource( 15 )
expand = true

[node name="文字" type="Label" parent="BackgroundPicture/school/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 124.0
margin_right = 70.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 37 )
text = "修改學校"

[node name="line" type="Line2D" parent="BackgroundPicture/school/TextureRect"]
position = Vector2( 36.922, -197.501 )
rotation = 3.14159
scale = Vector2( 1.59461, -0.76087 )
points = PoolVector2Array( -145, 520, -465, 520 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="SchoolLineEdit" type="LineEdit" parent="BackgroundPicture/school/TextureRect"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -171.0
margin_top = -34.0
margin_right = 171.0
margin_bottom = 35.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 22 )
custom_styles/focus = SubResource( 39 )
custom_styles/normal = SubResource( 39 )
placeholder_text = "例：內湖國小"
placeholder_alpha = 0.15

[node name="s_enter" type="Button" parent="BackgroundPicture/school/TextureRect"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -212.0
margin_right = 55.0
margin_bottom = -160.0
theme = SubResource( 18 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 24 )
custom_styles/pressed = SubResource( 26 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
text = "確定"
icon_align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="BackgroundPicture/school"]

[node name="cross3" type="Button" parent="BackgroundPicture/school"]
margin_left = 1795.0
margin_top = 24.0
margin_right = 2307.0
margin_bottom = 530.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 14 )
flat = true

[node name="phone" type="WindowDialog" parent="BackgroundPicture"]
visible = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -960.0
margin_top = -540.0
margin_right = 960.0
margin_bottom = 540.0
theme = SubResource( 17 )
custom_constants/close_h_ofs = 30
custom_constants/close_v_ofs = -10
custom_styles/panel = SubResource( 12 )
script = ExtResource( 13 )

[node name="TextureRect" type="TextureRect" parent="BackgroundPicture/phone"]
margin_left = 435.0
margin_top = 242.0
margin_right = 1485.0
margin_bottom = 838.0
texture = ExtResource( 15 )
expand = true

[node name="文字" type="Label" parent="BackgroundPicture/phone/TextureRect"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -70.0
margin_top = 124.0
margin_right = 70.0
margin_bottom = 176.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 37 )
text = "修改電話"

[node name="line" type="Line2D" parent="BackgroundPicture/phone/TextureRect"]
position = Vector2( 36.922, -197.501 )
rotation = 3.14159
scale = Vector2( 1.59461, -0.76087 )
points = PoolVector2Array( -145, 520, -465, 520 )
width = 2.0
default_color = Color( 0, 0, 0, 1 )

[node name="PhoneLineEdit" type="LineEdit" parent="BackgroundPicture/phone/TextureRect"]
margin_left = 354.0
margin_top = 264.0
margin_right = 696.0
margin_bottom = 333.0
custom_colors/selection_color = Color( 0, 0, 0, 1 )
custom_colors/cursor_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color_pressed = Color( 0, 0, 0, 1 )
custom_colors/font_color_selected = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/clear_button_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_uneditable = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 19 )
custom_styles/focus = SubResource( 39 )
custom_styles/normal = SubResource( 39 )

[node name="p_enter" type="Button" parent="BackgroundPicture/phone/TextureRect"]
margin_left = 470.0
margin_top = 384.0
margin_right = 580.0
margin_bottom = 436.0
theme = SubResource( 18 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color_focus = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 1, 1, 1, 1 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 1 )
custom_fonts/font = SubResource( 16 )
custom_styles/hover = SubResource( 25 )
custom_styles/pressed = SubResource( 27 )
custom_styles/focus = ExtResource( 11 )
custom_styles/disabled = ExtResource( 11 )
custom_styles/normal = ExtResource( 11 )
text = "確定"
icon_align = 1

[node name="HTTPRequest" type="HTTPRequest" parent="BackgroundPicture/phone"]

[node name="cross4" type="Button" parent="BackgroundPicture/phone"]
margin_left = 1795.0
margin_top = 24.0
margin_right = 2307.0
margin_bottom = 530.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 14 )
flat = true

[node name="cross" type="Button" parent="BackgroundPicture"]
margin_left = 1795.0
margin_top = 24.0
margin_right = 2307.0
margin_bottom = 530.0
rect_scale = Vector2( 0.2, 0.2 )
icon = ExtResource( 14 )
flat = true

[node name="HTTPRequest" type="HTTPRequest" parent="."]

[connection signal="pressed" from="BackgroundPicture/record" to="." method="_on_record_pressed"]
[connection signal="pressed" from="BackgroundPicture/personal" to="." method="_on_personal_pressed"]
[connection signal="pressed" from="BackgroundPicture/edit_birth_button" to="." method="_on_edit_birth_pressed"]
[connection signal="pressed" from="BackgroundPicture/edit_school_button" to="." method="_on_edit_school_pressed"]
[connection signal="pressed" from="BackgroundPicture/edit_phone_button" to="." method="_on_edit_phone_pressed"]
[connection signal="pressed" from="BackgroundPicture/birth/TextureRect/b_enter" to="BackgroundPicture/birth" method="_on_b_enter_pressed"]
[connection signal="request_completed" from="BackgroundPicture/birth/HTTPRequest" to="BackgroundPicture/birth" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="BackgroundPicture/birth/cross2" to="." method="_on_cross2_pressed"]
[connection signal="pressed" from="BackgroundPicture/school/TextureRect/s_enter" to="BackgroundPicture/school" method="_on_s_enter_pressed"]
[connection signal="request_completed" from="BackgroundPicture/school/HTTPRequest" to="BackgroundPicture/school" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="BackgroundPicture/school/cross3" to="." method="_on_cross3_pressed"]
[connection signal="pressed" from="BackgroundPicture/phone/TextureRect/p_enter" to="BackgroundPicture/phone" method="_on_p_enter_pressed"]
[connection signal="request_completed" from="BackgroundPicture/phone/HTTPRequest" to="BackgroundPicture/phone" method="_on_HTTPRequest_request_completed"]
[connection signal="pressed" from="BackgroundPicture/phone/cross4" to="." method="_on_cross4_pressed"]
[connection signal="pressed" from="BackgroundPicture/cross" to="." method="_on_cross_pressed"]
[connection signal="request_completed" from="HTTPRequest" to="." method="_on_HTTPRequest_request_completed"]
